more fun with pattern matching