@@ -4,6 +4,8 @@ import com.github.yannicklamprecht.human.gender.Female;
 import com.github.yannicklamprecht.human.gender.Gender;
 import com.github.yannicklamprecht.human.gender.Male;
 import com.github.yannicklamprecht.human.gender.Other;
+import com.github.yannicklamprecht.human.mammal.Dolphin;
+import java.util.Arrays;
 import java.util.List;
 
 import static java.lang.StringTemplate.STR;
@@ -18,15 +20,17 @@ public class Humanizer {
         var karen = new Human("Karen", new PersonalData(46, Gender.FEMALE));
         var lilly = new Human("Lilly", new PersonalData(25, Gender.other("gender-fluid")));
 
-        this.mammals = List.of(peter, karen, lilly);
+        var flipper = new Dolphin(Arrays.asList("whistles", "clicks"));
+
+        this.mammals = List.of(peter, karen, lilly, flipper);
     }
 
     public void print() {
         for (Mammal mammal : this.mammals) {
-            if(mammal instanceof Human(var name, PersonalData(var _, var gender))){
-                print(name, gender);
+            switch (mammal){
+                case Human(var name, PersonalData(var _, var gender)) -> print(name, gender);
+                case Dolphin dolphin -> dolphin.playSound();
             }
-
         }
     }
 
